Fix textarea sizes to refer min-height instead of height
Autosize plugin doesn't work correctly without this change and the
heights of textareas would be initially too small.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -154,7 +154,7 @@ ul {
   margin-top: lines(0.25);
 
   textarea {
-    height: lines(5);
+    min-height: lines(5);
   }
 }
 
@@ -1098,7 +1098,7 @@ $noscript-height: lines(4);
 
       textarea {
         width: 95%;
-        height: lines(4);
+        min-height: lines(4);
       }
 
     }
@@ -1125,7 +1125,7 @@ $noscript-height: lines(4);
       .comment-form {
         textarea {
           width: 100%;
-          height: lines(6);
+          min-height: lines(6);
         }
       }
     }
